--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.0",
+    "@tailwindcss/typography": "^0.5.2",
     "graphql": "^16.3.0",
     "graphql-request": "^4.2.0",
+    "html-react-parser": "^1.4.10",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0"
