--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@tailwindcss/typography": "^0.5.2",
     "graphql": "^16.3.0",
     "graphql-request": "^4.2.0",
+    "hamburger-react": "^2.5.0",
     "html-react-parser": "^1.4.10",
     "next": "12.1.4",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-headroom": "^3.2.0",
+    "react-use": "^17.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
