--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@svgr/webpack": "^6.2.1",
     "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/typography": "^0.5.2",
     "graphql": "^16.3.0",
@@ -26,6 +27,7 @@
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.4",
     "postcss": "^8.4.12",
+    "postcss-import": "^14.1.0",
     "tailwindcss": "^3.0.23"
   }
 }
