--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.6.2",
     "@svgr/webpack": "^6.2.1",
     "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/typography": "^0.5.2",
@@ -17,9 +18,11 @@
     "hamburger-react": "^2.5.0",
     "html-react-parser": "^1.4.10",
     "next": "12.1.4",
+    "ramda": "^0.28.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-headroom": "^3.2.0",
+    "react-hook-form": "^7.29.0",
     "react-use": "^17.3.2"
   },
   "devDependencies": {
