--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "12.1.4",
     "ramda": "^0.28.0",
     "react": "18.0.0",
+    "react-cookie-consent": "^7.4.1",
     "react-dom": "18.0.0",
     "react-headroom": "^3.2.0",
     "react-hook-form": "^7.29.0",
