--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "eslint-config-next": "12.1.4",
     "postcss": "^8.4.12",
     "postcss-import": "^14.1.0",
+    "prettier": "^2.6.2",
+    "prettier-plugin-tailwindcss": "^0.1.8",
     "tailwindcss": "^3.0.23"
   }
 }
