--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint"
   },
@@ -18,6 +19,7 @@
     "hamburger-react": "^2.5.0",
     "html-react-parser": "^1.4.10",
     "next": "12.1.4",
+    "next-sitemap": "^2.5.20",
     "ramda": "^0.28.0",
     "react": "18.0.0",
     "react-cookie-consent": "^7.4.1",
