--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "graphql-request": "^4.2.0",
     "hamburger-react": "^2.5.0",
     "html-react-parser": "^1.4.10",
+    "hyphen": "^1.6.4",
     "next": "12.1.4",
     "next-sitemap": "^2.5.20",
     "ramda": "^0.28.0",
