--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.29.0",
     "react-icons": "^4.3.1",
     "react-inlinesvg": "^2.3.0",
+    "react-intersection-observer": "^8.34.0",
     "react-use": "^17.3.2"
   },
   "devDependencies": {
