--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^12.1.5",
     "@sendgrid/mail": "^7.6.2",
     "@svgr/webpack": "^6.2.1",
     "@tailwindcss/forms": "^0.5.0",
