--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@svgr/webpack": "^6.2.1",
     "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/typography": "^0.5.2",
+    "clsx": "^1.1.1",
     "graphql": "^16.3.0",
     "graphql-request": "^4.2.0",
     "hamburger-react": "^2.5.0",
