--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-icons": "^4.3.1",
     "react-inlinesvg": "^2.3.0",
     "react-intersection-observer": "^8.34.0",
-    "react-use": "^17.3.2"
+    "react-use": "^17.3.2",
+    "swiper": "^8.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
