--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@next/bundle-analyzer": "^12.1.5",
     "@sendgrid/mail": "^7.6.2",
+    "@sentry/nextjs": "^6.19.6",
     "@svgr/webpack": "^6.2.1",
     "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/typography": "^0.5.2",
@@ -22,6 +23,7 @@
     "html-react-parser": "^1.4.10",
     "hyphen": "^1.6.4",
     "next": "12.1.4",
+    "next-compose-plugins": "^2.2.1",
     "next-sitemap": "^2.5.20",
     "ramda": "^0.28.0",
     "react": "18.0.0",
