--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-icons": "^4.3.1",
     "react-inlinesvg": "^2.3.0",
     "react-intersection-observer": "^8.34.0",
+    "react-scroll": "^1.8.7",
     "react-spinners": "^0.11.0",
     "react-transition-group": "^4.4.2",
     "react-use": "^17.3.2",
